--- a/pom.xml
+++ b/pom.xml
@@ -103,7 +103,7 @@
               <goal>shade</goal>
             </goals>
             <configuration>
-              <finalName>main_job4j_di</finalName>
+              <finalName>main</finalName>
               <transformers>
                 <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                   <mainClass>ru.job4j.di.Main</mainClass>
